# tilda_vilka2x2

./: .gitignore  README.md  pyproject.toml
js_code/: updateDeliveryPriceInCart.js  verifyAndUpdateCartTotalWithDelay.js
src/api/v1/CheckAddress/: dto.py  views.py
src/api/v1/PromoCodeWorker/: views.py
src/api/v1/TildaWebhook/: views.py
src/apps/CheckAddress/: apps.py  urls.py
src/apps/PromoCodeWorker/: apps.py  models.py  serializers.py  urls.py
src/apps/TildaWebhook/: apps.py  models.py  serializers.py  urls.py
src/config/: middleware.py  settings.py  urls.py
src/utils/: dto_message.py  getLogger.py  logging_config.py  numbers.py
tilda_utils/: checkPromocode.js
